update index page

--- a/Website/Temporary index page (delete later)/index.html
+++ b/Website/Temporary index page (delete later)/index.html
@@ -11,7 +11,7 @@
 
                 <div class="top-border">
                         <div class="rosen-logo">
-                                        <img src="./images/ROSEN_Logo_White_220.png" id="logo">       
+                                        <img src="../../Website/static/images/ROSEN_Logo_White_220.png" id="logo">       
                         </div>
                 </div>
 
@@ -51,3 +51,4 @@
 
         </body>
 </html>
+
